--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container">
             <h2 class="text-uppercase text-center text-white">About ME</h2>
             <hr class="star-light mb-5">
-            <p class="lead" style="text-align: center;">Freelancer is a free bootstrap theme. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead" style="text-align: center;">Likes to learn new things, likes to overcome the challenges given and for sure I really like code. And I create this portfolio fully using Bootstrap</p>
             <div class="text-center mt-4"></div>
         </div>
     </section>
